--- a/build.gradle
+++ b/build.gradle
@@ -16,4 +16,6 @@ dependencies {
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'org.assertj', name: 'assertj-core', version:'3.10.0'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.7'
+
 }
